---
source: crates/cli/tests/auth.rs
expression: "public_client.gql::<Value>(AUTH_QUERY_WITH_TEXT).await"
---
{
  "data": {
    "todoCollection": {
      "__typename": "TodoConnection",
      "edges": [
        null
      ]
    }
  },
  "errors": [
    {
      "message": "Unauthorized to access Todo.text",
      "path": [
        "todoCollection",
        "edges",
        0,
        "node"
      ]
    }
  ]
}
